Moving from in memory checkpoints storage to DB using Hibernate ORM